# cms-and-rust

./: Cargo.toml  README.md  cms_rust_config.toml  cmsgo_config.toml  md_post_example_test.json  post_markdown.bat  test_minimal.json
cms-and-go-admin-app/: Cargo.toml
cms-and-go-app/: Cargo.toml
cms-and-go-app/src/: main.rs
cms-and-rust-admin-app/: Cargo.toml
cms-and-rust-admin-app/src/: main.rs
cms-and-rust-app/: Cargo.toml
cms-and-rust-app/src/: main.rs
common/: Cargo.toml
common/src/: app_error.rs  config.rs  lib.rs  posts.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
views/: index.html.in  post_detail.html.in
